<resources>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Login">Login as Player</string>
    <string name="LeftButton">Zoom In</string>
    <string name="RightButton">Zoom Out</string>
    <string name="MidButton">Create</string>
    <string name="EndTextDefault">Turn Over</string>
</resources>
