<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mapMaker">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:scrollbars="vertical"
        android:id="@+id/scroll">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/inLayout">
                </TableLayout>
            </RelativeLayout>
        </HorizontalScrollView>
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        style="android:attr/buttonBarStyle">
        <Button
            style="android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="30"
            android:text="@string/LeftButton"
            android:id="@+id/B1"/>
        <Button
            style="android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="30"
            android:text="@string/MidButton"
            android:id="@+id/B3"/>
        <Button
            style="android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="30"
            android:text="@string/RightButton"
            android:id="@+id/B2"/>
    </LinearLayout>
</LinearLayout>